Add initial quiz feature